test/types/range/hilde/rangeSliceStatic.good
rangeSliceStatic.chpl:8: syntax error: syntax error near '('
rangeSliceStatic.chpl:9: syntax error: syntax error near '['
